--- a/java_server/server-java/server-RentEco/src/main/resources/application.properties
+++ b/java_server/server-java/server-RentEco/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://rentecodatabase.mysql.database.azure.com:3306/renteco
-spring.datasource.username=sebiantdam
-spring.datasource.password=Cactus!@
+spring.datasource.url=jdbc:mysql://34.136.238.225:3306/renteco
+spring.datasource.username=root
+spring.datasource.password=rentacareco
 server.port=3000
 
 spring.jpa.hibernate.ddl-auto=update
