--- a/java_server/server-java/server-RentEco/src/main/resources/application.properties
+++ b/java_server/server-java/server-RentEco/src/main/resources/application.properties
@@ -1,10 +1,19 @@
-spring.datasource.url=jdbc:mysql://34.136.238.225:3306/renteco
+spring.datasource.url=jdbc:mysql://34.136.238.225:3306/renteco?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=rentacareco
-server.port=3000
+server.port=443
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 jwt.expiration=86400000
+
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=src/main/resources/keystore.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=cactus
+# The alias mapped to the certificate
+server.ssl.key-alias=mykeystore
