--- a/server-RentEco/src/main/resources/application.properties
+++ b/server-RentEco/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://34.136.238.225:3306/renteco?useSSL=false
+spring.datasource.url=jdbc:mysql://35.238.156.2:3306/renteco?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=rentacareco
+spring.datasource.password=cactus
 server.port=443
 
 spring.jpa.hibernate.ddl-auto=update
